--- a/template/email_verify.html
+++ b/template/email_verify.html
@@ -135,7 +135,7 @@
                         margin: 16px 0;
                         color: rgb(51, 51, 51);
                       ">
-                                            https://mscpo.tblstudio.cn/verify?token={{token}}
+                                            https://mscpo.tblstudio.cn/auth?token={{token}}
                                         </p>
                                     </td>
                                 </tr>
@@ -147,7 +147,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <a href="https://mscpo.tblstudio.cn/verify?token={{token}}"
+                                        <a href="https://mscpo.tblstudio.cn/auth?token={{token}}"
                                             data-id="react-email-button" target="_blank" style="
                         line-height: 100%;
                         text-decoration: none;
