🐛 修复模板变量错误

--- a/template/email_verify.html
+++ b/template/email_verify.html
@@ -196,9 +196,9 @@
                         color: rgb(107, 114, 128);
                       ">
                                             {% if from_who %}
-                                            “{{ sentence }}” —— {{ author }}《{{ from_who }}》
+                                            “{{ sentence }}” —— {{ sentence_from }}《{{ from_who }}》
                                             {% else %}
-                                            "{{ sentence }}" —— {{ author }}《{{ from_who }}
+                                            "{{ sentence }}" —— {{ sentence_from }}
                                             {% endif %}
                                         </p>
                                     </td>
