--- a/template/email_verify.html
+++ b/template/email_verify.html
@@ -81,7 +81,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <img data-id="react-email-img" src="https://mscpo.tblstudio.cn/logo.webp
+                                    <img data-id="react-email-img" src="https://mscpo.crashvibe.cn/logo.webp
 " style="
                         display: block;
                         outline: none;
@@ -135,7 +135,7 @@
                         margin: 16px 0;
                         color: rgb(51, 51, 51);
                       ">
-                                            https://mscpo.tblstudio.cn/auth?token={{token}}
+                                            https://mscpo.crashvibe.cn/auth?token={{token}}
                                         </p>
                                     </td>
                                 </tr>
@@ -147,7 +147,7 @@
                             <tbody>
                                 <tr>
                                     <td>
-                                        <a href="https://mscpo.tblstudio.cn/auth?token={{token}}"
+                                        <a href="https://mscpo.crashvibe.cn/auth?token={{token}}"
                                             data-id="react-email-button" target="_blank" style="
                         line-height: 100%;
                         text-decoration: none;
